--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="content">
-                                    <h5 class="title">Number</h5>
-                                    <a href="#"> Number</a>
+                                    <h5 class="title">Phone</h5>
+                                    <a href="#"> +94 77 521 6682</a>
                                 </div>
                             </li>
                             <li class="wow fadeInUp" data-wow-delay="300ms">
@@ -347,7 +347,7 @@
                                 <div class="info">
                                     <h5 class="title">Our Location</h5>
                                     <p>
-                                        Sri lanka <br> Sri Lanka
+                                        Ihala Kosgama, Kosgama <br> Sri Lanka
                                     </p>
                                 </div>
                             </li>
@@ -357,7 +357,7 @@
                                 </div>
                                 <div class="info">
                                     <h5 class="title">Email</h5>
-                                    <a href="mailto:lorem@lorem.com.com">lorem.com</a>
+                                    <a href="mailto:agventuresorganic@gmail.com">agventuresorganic@gmail.com</a>
                                 </div>
                             </li>
                         </ul>
