--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <div class="attr-right">
                     <!-- Start Atribute Navigation -->
-                    <!-- <div class="attr-nav">
+                    <div class="attr-nav">
                         <ul>
 
                             <li class="side-menu">
@@ -156,7 +156,7 @@
                     <!-- End Atribute Navigation -->
 
                     <!-- Start Side Menu -->
-                    <!-- <div class="side">
+                    <div class="side">
                         <a href="#" class="close-side"><i class="icon_close"></i></a>
                         <div class="widget">
                             <div class="logo">
@@ -198,7 +198,7 @@
                                 <li><a href="#"><i class="fab fa-behance"></i></a></li>
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- End Side Menu -->
 
                 </div>
