--- a/index.html
+++ b/index.html
@@ -172,19 +172,19 @@
                                     <li>
                                         <div class="content">
                                             <p>Address</p>
-                                            <strong> lorem </strong>
+                                            <strong> Ihala Kosgama, Kosgama <br> Sri Lanka </strong>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="content">
                                             <p>Email</p>
-                                            <strong>lorem@lorem.com</strong>
+                                            <strong>agventuresorganic@gmail.com</strong>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="content">
                                             <p>Contact</p>
-                                            <strong>lorem</strong>
+                                            <strong>+94 77 521 6682</strong>
                                         </div>
                                     </li>
                                 </ul>
@@ -192,10 +192,10 @@
                         </div>
                         <div class="widget social">
                             <ul class="link">
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                                <li><a href="https://www.facebook.com/profile.php?id=100069911492760"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.instagram.com/ag.ventures_"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://twitter.com/AgventuresK"><i class="fab fa-twitter"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
@@ -336,7 +336,7 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="content">
-                                    <h5 class="title">Phone</h5>
+                                    <h5 class="title">Contact</h5>
                                     <a href="#"> +94 77 521 6682</a>
                                 </div>
                             </li>
