Added White logo

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </div> -->
+                    </div>
                     <!-- End Atribute Navigation -->
 
                     <!-- Start Side Menu -->
@@ -160,7 +160,7 @@
                         <a href="#" class="close-side"><i class="icon_close"></i></a>
                         <div class="widget">
                             <div class="logo">
-                                <img src="assets/img/logo-light.png" alt="Logo">
+                                <img src="assets/img/logo - white.png" alt="Logo">
                             </div>
                             <p>
                                 AgVentures practices sustainable farming with a focus on biodiversity, ecological processes, adaptation to local conditions, traditional Sri Lankan pest control, biodynamic methods, and rainwater harvesting. They aim to improve human health and the health of their soil and local ecosystem.
@@ -199,6 +199,7 @@
                             </ul>
                         </div>
                     </div>
+                    Text1
                     <!-- End Side Menu -->
 
                 </div>
