--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- Start Header Navigation -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-                        <i class="fa fa-bars"></i>
+
                     </button>
                     <a class="navbar-brand" href="index.html">
                         <img src="assets/img/logo.png" class="logo" alt="Logo">
@@ -75,14 +75,14 @@
                 <!-- End Header Navigation -->
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="navbar-menu">
+                <!-- <div class="collapse navbar-collapse" id="navbar-menu">
 
                     <img src="assets/img/logo.png" alt="Logo">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-times"></i>
                     </button>
 
-                    <!-- <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
+                    <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >Home</a>
                             <ul class="dropdown-menu">
@@ -136,8 +136,9 @@
                                 <li><a href="shop-single-thumb-only.html">Shop Single Two</a></li>
                             </ul>
                         </li>
-                    </ul> -->
-                </div><!-- /.navbar-collapse -->
+                    </ul>
+                </div> -->
+                <!-- /.navbar-collapse -->
 
                 <div class="attr-right">
                     <!-- Start Atribute Navigation -->
@@ -199,7 +200,7 @@
                             </ul>
                         </div>
                     </div>
-                    Text1
+
                     <!-- End Side Menu -->
 
                 </div>
